--- a/homework/src/main/res/layout/activity_main.xml
+++ b/homework/src/main/res/layout/activity_main.xml
@@ -1,41 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context="cn.edu.sdwu.android.home.sn170507180218.MainActivity">
 
-    <Button
-        android:id="@+id/homework_btn1"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="作业一"/>
-    <Button
-        android:id="@+id/homework_btn2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="作业二"/>
-    <Button
-        android:id="@+id/homework_btn3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="作业三"/>
-    <Button
-        android:id="@+id/homework_btn4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="作业四"/>
-    <Button
-        android:id="@+id/homework_btn5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="作业五"/>
-    <Button
-        android:id="@+id/homework_btn6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="作业六"/>
+        android:text="Hello World!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
